# Helios_III

./: .gitattributes  .gitignore  FSM_Diagram.drawio  README.md  index.html  log.txt  package-lock.json  package.json  plot.html  settings.html  setup_vcan.sh  startup.html  vite.config.ts
app/: Cargo.toml  build.rs  rustfmt.toml
app/.cargo/: config.toml
app/src/: Useful_Configurations.txt  main.rs  pconfig.rs
app/src/core/: BatteryController.rs  CAN.rs  finite_state_machine.rs  finite_state_machine_peripherals.rs  fsm_status.rs  mod.rs  sensor_hub_data.rs
app/src/core/communication/: can.rs  can.toml  comm.rs  data.rs  mod.rs  parse.rs  sensor_hub_communication.rs  task.rs  tcp.rs  uart.rs  udp.rs
app/src/core/controllers/: battery_controller.rs  breaking_controller.rs  can_controller.rs  ethernet_controller.rs  external_communication.rs  finite_state_machine_peripherals.rs  hv_controller.rs  led_controller.rs  mod.rs  propulsion_controller.rs
app/src/core/data/: batteries.rs  levi.rs  mod.rs  sources.rs  trash.rs
app/src/core/states/: accelerating.rs  boot.rs  braking.rs  cruising.rs  emergency_braking.rs  establish_connection.rs  exit.rs  hv_on.rs  hv_system_checking.rs  idle.rs  lane_switch.rs  levitating.rs  mod.rs  moving_end_ls.rs  moving_end_st.rs  moving_ls_cv.rs  moving_ls_st.rs  moving_st.rs  precharging.rs  run_config.rs
gs/: .prettierrc.yaml  Cargo.toml  README.md  SCRUTINEERING.md  build.rs  flake.nix  package-lock.json  package.json  shell.nix  svelte.config.js  tailwind.config.ts  vite.config.ts
gs/.run/: generate_commands.run.xml  generate_datatypes.run.xml  tauri dev.run.xml
gs/docs/: GDD.md
gs/docs/api/: apiGDD.md
gs/scripts/: populate_commands.sh  populate_datatypes.sh  pupulate_datatypes.sh
gs/src/: app.html  app.postcss  delft_hyperloop_dark.ts  main.rs  util.rs
gs/src/api/: mod.rs
gs/src/gui/: app.rs  main.rs  mod.rs  ui.rs
gs/src/lib/: index.ts  namedDatatypeEnum.ts  types.ts
gs/src/lib/components/: Battery.svelte  BottomBar.svelte  FSM.svelte  InitialisationForm.svelte  Localiser.svelte  Pneumatics.svelte  SpeedsInput.svelte  TheoreticalRun.svelte  TitleBar.svelte
gs/src/lib/panels/: DetailsPanel.svelte  LogsPanel.svelte  VitalsPanel.svelte
gs/src/lib/stores/: data.ts  state.ts
gs/src/lib/util/: CommandInvoker.ts  DecodeBMS.ts  DecodeGroundFaultDetection.ts  GrandDataDistributor.ts  GraphPlot.ts  PlotBuffer.ts  RunConfig.ts  TauriCommand.ts  WindowControl.ts  parsers.ts  util.ts
gs/src/routes/: +layout.svelte  +page.svelte
gs/src/station/: mod.rs  station.rs
gs/station/: .clippy.toml  Cargo.toml  Levi.7z  build.rs  log-2024-07-18_12-22-35.txt  rustc-ice-2024-06-07T10_59_07-33759.txt  rustc-ice-2024-06-07T10_59_38-34070.txt  rustc-ice-2024-06-14T10_32_06-45354.txt  rustfmt.toml  tauri.conf.json
gs/station/Levi/: 00000002_044c2c52_0012.xml  00000002_0c203052_0014.xml  Acquisition.cs  ControllerDiscoveryAndInit.cs  EnableAndMoveAxis.cs  FirmwareUpdate.cs  InputsOutputs.cs  Levitation.cs  PmpGettingStartedCs.csproj  PmpGettingStartedCs.sln  PmpGettingStartedCs_TemporaryKey.pfx  Subscriptions.cs  levitation_config_file.xml  levitation_config_file_4_cygnuses.xml
gs/station/Levi/Properties/: AssemblyInfo.cs
gs/station/icons/: icon.icns
gs/station/src/: api.rs  backend.rs  lib.rs  main.rs
gs/station/src/analysis/: main.rs
gs/station/src/battery/: mod.rs
gs/station/src/connect/: handle_incoming_data.rs  handler.rs  mod.rs  parser.rs  queueing.rs  tcp_reader.rs  tcp_writer.rs
gs/station/src/data/: mod.rs  process.rs  validate.rs
gs/station/src/frontend/: app.rs  commands.rs  main.rs  mod.rs
gs/station/src/levi/: handler.rs  mod.rs  parse_input.rs  parser.rs  read_from_stdout.rs  write_to_stdin.rs  writer.rs
gs/station/src/tests/: backend.rs
gs/station/src/tui/: app.rs  interactions.rs  mod.rs  render.rs
gs/tests/unit/lib/: parsers.spec.ts  util.spec.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build_resources.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/lib/appdata/: Cargo.toml
src-tauri/lib/appdata/src/: lib.rs
src-tauri/lib/cli/: .gitignore  Cargo.toml  README.md  logging-node.py
src-tauri/lib/cli/src/: client.rs  config.rs  dump.rs  errors.rs  generate.rs  get.rs  lib.rs  main.rs  scan.rs  server.rs  ssh.rs  status.rs  update.rs
src-tauri/lib/codegen/: .gitignore  Cargo.toml
src-tauri/lib/codegen/examples/: simple.rs  simple.yaml
src-tauri/lib/codegen/src/: can_module_hooks.rs  command_hooks.rs  errors.rs  header_guard.rs  includes.rs  lib.rs  messages.rs  object_entries.rs  options.rs  pil.rs  poll.rs  rx_handlers.rs  scheduler.rs  senders.rs  setters.rs  setup.rs  types.rs  update.rs
src-tauri/lib/common/: Cargo.toml
src-tauri/lib/common/src/: lib.rs
src-tauri/lib/config/: Cargo.toml  README.md
src-tauri/lib/config/examples/: simple.rs
src-tauri/lib/config/src/: errors.rs  lib.rs
src-tauri/lib/config/tests/: message_resolution_fixed_ids_test.rs  message_resolution_single_prio_test.rs  message_resolution_uniform_prio_test.rs
src-tauri/lib/server/: Cargo.toml
src-tauri/lib/server/examples/: simple.rs
src-tauri/lib/server/src/: lib.rs
src-tauri/lib/socketcan/: Cargo.toml
src-tauri/lib/socketcan/examples/: dump.rs
src-tauri/lib/socketcan/src/: can_socket.rs  lib.rs  socket_can.rs
src-tauri/lib/tcp/: Cargo.toml
src-tauri/lib/tcp/examples/: connect.rs  host.rs  size_check.rs
src-tauri/lib/tcp/src/: frame.rs  lib.rs  tcpcan.rs  wdg.rs
src-tauri/lib/udp/: Cargo.toml
src-tauri/lib/udp/examples/: scan_for_networks.rs  start_beacon.rs
src-tauri/lib/udp/src/: beacon.rs  frame.rs  lib.rs  (+2 more)
src-tauri/lib/yaml/: Cargo.toml  README.md  stream_example.yaml  test.dbc  test.yaml
src-tauri/src/: main.rs  notification.rs
src-tauri/src/cnl/: connection.rs  errors.rs  gamepad.rs  mod.rs  tx.rs
src-tauri/src/commands/: connection_status.rs  export.rs  mod.rs  network_information.rs  node_commands.rs  object_entry_commands.rs  search_string_storage.rs  settings.rs  startup.rs  trace.rs
src-tauri/src/state/: cnl_state.rs  mod.rs  startup.rs
(+559 files in other folders)
