[package]
name = "app"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["defmt", "stm32h743zi", "time-driver-any", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-sync = { version = "0.5.0", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../../embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.4.0", path = "../../embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-usb = { version = "0.1.0", path = "../../embassy/embassy-usb", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
embedded-can = "0.4.1"
embedded-hal-async = { version = "1.0" }
embedded-nal-async = { version = "0.7.1" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.3.0"
embedded-storage = "0.3.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }
log = "0.4.21"


# Only for build.rs
[build-dependencies]
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"


# Build and run configurations
[profile.dev]
opt-level = "s"
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = true
panic = 'unwind'
incremental = true
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
