[package]
name = "app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
embedded-can = "0.4.1"
embedded-hal-async = { version = "1.0" }
embedded-nal-async = { version = "0.7.1" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
#critical-section = "1.1"
#embedded-storage = "0.3.1"
static_cell = "2"
#chrono = { version = "^0.4", default-features = false }

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
rev = "dc30bcfa"
features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]

[dependencies.embassy-net]
git = "https://github.com/embassy-rs/embassy.git"
rev = "dc30bcfa"
features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"]

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy.git"
rev = "dc30bcfa"
features = ["defmt", "stm32h743zi", "time-driver-any", "exti", "memory-x", "unstable-pac", "chrono"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy.git"
rev = "dc30bcfa"
features = ["defmt"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
rev = "dc30bcfa"
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]

[dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy.git"
rev = "dc30bcfa"
version = "0.2.0"
features = ["defmt"]


# Only for build.rs
[build-dependencies]
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"
goose_utils = { path = "../util" }

# Build and run configurations
[profile.dev]
opt-level = "s"
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = true
panic = 'unwind'
incremental = true
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
