[package]
name = "station"
version = "0.4.0"
description = "Helios III Ground Station"
authors = ["Andreas Tsatsanis", " Francisco Amaro", "Kiril Panayotov"]
license = "MIT"
repository = "https://github.com/delft-hyperloop/Helios_III.git"
default-run = "station"
edition = "2021"
rust-version = "1.60"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.86"
tauri-build = { version = "1.5.1", features = [] }
serde = { version = "1.0.197", features = ["derive"] }
regex = "1.10.3"
toml = "0.8.11"
goose_utils = { path = "../../util" }

[dependencies]
rand = "0.8.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
toml = "0.8.12"
crossterm = { version = "0.27.0", optional = true }
ratatui = { version = "0.26.1", features = ["widget-calendar"], optional = true }
regex = "1.10.3"
rayon = "1.9.0"
colored = "2.1.0"
time = "0.3.34"
tauri = { version = "1.6.7", features = [ "window-create", "global-shortcut-all", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-minimize", "window-hide", "window-show", "window-close", "window-maximize"], optional = true }
tokio = { version = "1.29.1", features = ["rt", "time", "rt-multi-thread", "macros", "net", "process", "sync", "io-std", "io-util"] }
anyhow = "1.0.86"
csv = "1.2.2"

[[bin]]
name = "station"
path = "src/main.rs"

[[bin]]
name = "anal"
path = "src/analysis/main.rs"

[lib]
name = "gslib"
path = "src/lib.rs"

#[dependencies.tauri]
#version = "1.6.2"
#features = [ "window-start-dragging", "window-unminimize", "window-unmaximize", "window-minimize", "window-hide", "window-show", "window-close", "window-maximize"]
#[package.metadata.tauri]
#label = "Goose Ground Station"
#width = 800
#height = 600
#resizable = true

[features]
default = ["backend"]
tui = ["crossterm", "ratatui"]
backend = ["tauri"]
full = ["backend", "tui"]

# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

