[package]
name = "canzero-appdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canzero-config = { path = "../config/" }
canzero-yaml = { path = "../yaml" }
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
