[package]
name = "canzero-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
regex = "1.10.2"
can-dbc = "5.0"
bit_reverse = "0.1.8"
seahash = "4.1.0"

[features]
logging-info = []
logging-irp = []
