[package]
name = "canzero-socketcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canzero-common = { path = "../common/" }
tokio = { version = "1.36.0", features = ["full"] }
libc = {version = "0.2.149"}
nix = {version = "0.27.1", features = ["net"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
color-print = "0.3.6"
interfaces = "0.0.9"
