[package]
name = "canzero-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canzero-common = { path = "../common/" }
tokio = { version = "1.36.0", features = ["full"] }
bincode = { version = "1.3.3", features = ["i128"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
color-print = "0.3.6"
