[package]
name = "canzero-udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canzero-config = { path = "../config/" }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
tokio = { version = "1.36.0", features = ["full"] }
color-print = "0.3.6"
chrono = "0.4.38"
build-time = "0.1.3"
